--- a/public/index.html
+++ b/public/index.html
@@ -5,54 +5,44 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Le Nexus - Votre portail vers Polkadot" />
+    <meta name="description" content="Le Nexus - Rejoignez la communauté francophone de Polkadot et OpenGov, dédiée à l'éducation blockchain." />
 
-    <!-- Balises Open Graph pour la prévisualisation -->
-    <meta
-      property="og:title"
-      content="Le Nexus - Le Portail Francophone vers Polkadot"
-    />
-    <meta
-      property="og:description"
-      content="Rejoignez la communauté francophone du Nexus, dédiée à Polkadot et à l'OpenGov."
-    />
-    <meta
-      property="og:image"
-      content="https://lenexus.4everland.store/background/Previews_LeNexus.png"
-    />
-    <meta
-      property="og:url"
-      content="https://news-website-lenexus.vercel.app/"
-    />
+    <meta name="keywords" content="Polkadot, Kusama, Blockchain, Le Nexus, OpenGov, Gouvernance, DAO, Crypto, Éducation Blockchain, Francophone, France, web3" />
+    <meta name="author" content="xcRom1" />
+
+    <meta property="og:title" content="Le Nexus - Le Portail Francophone vers Polkadot" />
+    <meta property="og:description" content="Le Nexus - Rejoignez la communauté francophone de Polkadot et OpenGov, dédiée à l'éducation blockchain." />
+    <meta property="og:image" content="https://lenexus.4everland.store/background/Previews_LeNexus.png" />
+    <meta property="og:url" content="https://lenexus.org/" />
     <meta property="og:type" content="website" />
-
-    <!-- Balises Twitter Cards -->
+    
     <meta name="twitter:card" content="summary_large_image" />
-    <meta
-      name="twitter:title"
-      content="Le Nexus - Le Portail Francophone vers Polkadot"
-    />
-    <meta
-      name="twitter:description"
-      content="Rejoignez la communauté francophone dédiée à Polkadot et OpenGov."
-    />
-    <meta
-      name="twitter:image"
-      content="https://lenexus.4everland.store/background/Previews_LeNexus.png"
-    />
+    <meta name="twitter:title" content="Le Nexus - Le Portail Francophone vers Polkadot" />
+    <meta name="twitter:description" content="Rejoignez la communauté francophone de Polkadot et OpenGov, dédiée à l'éducation blockchain." />
+    <meta name="twitter:image" content="https://lenexus.4everland.store/background/Previews_LeNexus.png" />
 
-    <!-- Liens des polices et manifestes -->
-    <link
-      href="https://fonts.googleapis.com/css2?family=Unbounded:wght@400;500;600;700&display=swap"
-      rel="stylesheet"
-    />
+    <script type="application/ld+json">
+      {
+        "@context": "http://schema.org",
+        "@type": "Organization",
+        "name": "Le Nexus",
+        "url": "https://lenexus.org",
+        "logo": "https://lenexus.4everland.store/le_nexus/Public%20-%20Le%20Nexus%20(brandkit)/logo%20(empty%20_Le%20Nexus_)/Color/transparent/logo-zoom-color-transparent-lenexus.png",
+        "description": "Une communauté dédiée à l'éducation blockchain, au Polkadot et à l'OpenGov francophone.",
+        "sameAs": [
+          "https://x.com/lenexus_org"
+        ]
+      }
+    </script>
+
+    <link href="https://fonts.googleapis.com/css2?family=Unbounded:wght@400;500;600;700&display=swap" rel="stylesheet" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>LE NEXUS</title>
+    <title>Le Nexus - Communauté Francophone de Polkadot</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>Vous devez activer JavaScript pour faire fonctionner cette application.</noscript>
     <div id="root"></div>
   </body>
 </html>
