--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Le Nexus - Rejoignez la communauté francophone de Polkadot et OpenGov, dédiée à l'éducation blockchain." />
-
+    
+    <meta name="robots" content="index, follow" />
+    
     <meta name="keywords" content="Polkadot, Kusama, Blockchain, Le Nexus, OpenGov, Gouvernance, DAO, Crypto, Éducation Blockchain, Francophone, France, web3" />
     <meta name="author" content="xcRom1" />
 
